--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -10,9 +10,11 @@ jobs:
   build:
     name: Build + Publish
     runs-on: ubuntu-latest
+
     permissions:
       contents: read
       packages: write
+      id-token: write
 
     steps:
       - uses: actions/checkout@v4
