--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -19,21 +19,22 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Set up Ruby
-        # To automatically get bug fixes and new Ruby versions for ruby/setup-ruby,
-        # change this to (see https://github.com/ruby/setup-ruby#versioning):
         uses: ruby/setup-ruby@v1
-
+      - name: Install dependencies
+        run: bundle install --jobs 4 --retry 3
+      - name: Run tests
+        run: rake test
+      - name: Build gem
+        run: gem build *.gemspec
       - name: Publish to GPR
         run: |
           mkdir -p $HOME/.gem
           touch $HOME/.gem/credentials
           chmod 0600 $HOME/.gem/credentials
           printf -- "---\n:github: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
-          gem build *.gemspec
           gem push --KEY github --host https://rubygems.pkg.github.com/${OWNER} *.gem
         env:
           GEM_HOST_API_KEY: "Bearer ${{secrets.GH_GEM_HOST_TOKEN}}"
           OWNER: ${{ github.repository_owner }}
-
       - name: Publish to RubyGems
         uses: rubygems/release-gem@v1
