--- a/.github/workflows/gem-push.yml
+++ b/.github/workflows/gem-push.yml
@@ -20,15 +20,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
-      - name: Cache bundle
-        uses: actions/cache@v4
-        with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
       - name: Install dependencies
-        run: bundle install --path vendor/bundle
+        run: bundle install --jobs 4 --retry 3
       - name: Run tests
         run: rake test
       - name: Build gem
